chore: adicionar porta do servidor, contexto da aplicação e configurações swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=vendas-api
 
+server.port=8080
+server.servlet.context-path=/vendas-api
+
+springdoc.swagger-ui.path=/documentacao
+springdoc.api-docs.path=/docs
+
 spring.data.mongodb.uri=mongodb://localhost:27021/vendas?replicaSet=rs0
